# llama3-8b-gptq-4bit

./: .gitignore  CASE_STUDY.md  CASE_STUDY_MEDICAL.md  COLAB_README.md  INSTALL_T4.md  LICENSE  README.md  check_and_load_model.py  pyproject.toml  requirements-t4-cuda124.txt  setup.cfg  test_gptqmodel.py
configs/: eval.yaml  quant-gptq-3bit.yaml  quant-gptq-4bit-medical.yaml  quant-gptq-4bit-t4.yaml  quant-gptq-4bit.yaml
deploy_eval/: README.md  VALIDATION_REPORT.md  deploy_vllm.py  medical_test_cases.json  quick_test.py  requirements.txt  run_validation.py  serve_vllm_api.py  setup_gcp.sh  validate_model.py  validation_results.json
docs/: MEDICAL_CALIBRATION.md
examples/: Makefile
examples/notebooks/: 01_quantize_and_eval.ipynb  Colab_GPTQ_Quantization.ipynb
examples/prompts/: system_prompt.txt
innova_llama3_gptq/: __init__.py  gptq_pipeline.py
innova_llama3_gptq/evals/: __init__.py  perplexity.py  reporting.py  tasks.py
innova_llama3_gptq/hf/: __init__.py  processing.json  repo_card_template.md
scripts/: diagnose_calibration.py  eval_gptq.py  export_hf_gptq.py  gen_repo_card.py  prepare_medical_calibration.py  quantize_llama3_gptq.py  quick_test.py  utils.py
