[metadata]
name = innova-llama3-gptq
version = attr: innova_llama3_gptq.__version__

[options]
packages = find:
python_requires = >=3.10
install_requires =
    transformers>=4.44.0
    accelerate>=0.33.0
    datasets>=2.20.0
    huggingface_hub>=0.24.0
    auto-gptq>=0.7.1
    safetensors>=0.4.3
    numpy>=1.24.0
    torch>=2.1.0
    tqdm>=4.65.0
    pyyaml>=6.0
    pandas>=2.0.0
    psutil>=5.9.0

[options.packages.find]
include = innova_llama3_gptq*

[options.entry_points]
console_scripts =
    innova-gptq = innova_llama3_gptq.cli:main